# drg-room-editor

./: .gitignore  README.md  THIRD_PARTY_LICENSES.md  json_builder.py  main.py  pyproject.toml  room_parser.py  room_viewer.py  uassetgen.py
assets/default_assets/: default_asset.json  default_asset_pe.json  default_entrance.json  default_floodfillline.json  default_pe_droppoddown.json  default_pe_minehead.json  default_pillar.json  default_pillar_point.json  default_randomselector.json  default_randomselector_reference.json  default_room.json  default_room_reference.json  default_roomlinepoint.json
example_rooms/: RMA_BigPit01.json  RMA_BigPit02.json  RMA_BigPit_unused.json  RMA_Circles01.json  RMA_Circles02.json  RMA_Circles03.json  RMA_EditorTutorial.json  RMA_IC01.json  RMA_IC02.json  RMA_IC02_PE.json  RMA_IC03.json  RMA_IC04.json  RMA_IC05.json  RMA_IC06.json  RMA_IC07.json  RMA_IC08.json  RMA_IC09.json  RMA_IC10.json  RMA_IC11.json  RMA_IC12.json  RMA_IC13.json  RMA_IC14.json  RMA_IC15.json  RMA_IC16.json  RMA_PE_IC02.json  RMA_PE_IC03.json  RMA_PE_IC04.json  RMA_Spiral.json  RMA_SpiralMedium.json  RMA_SpiralSmall.json  spiral-room.json
libs/: UAssetAPI.deps.json
