[project]
name = "drg-room-editor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dearpygui>=2.1.1",
    "jsonschema>=4.25.1",
    "matplotlib>=3.10.8",
    "more-itertools>=10.8.0",
    "numpy>=2.4.0",
    "pythonnet>=3.0.5",
    "scipy>=1.16.3",
    "ttkbootstrap>=1.20.0",
]
