[project]
name = "drg-room-editor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.25.1",
    "more-itertools>=10.8.0",
    "numpy>=2.4.0",
    "pyopengl>=3.1.10",
    "pyqtgraph>=0.13.0",
    "PySide6>=6.6.0",
    "pythonnet>=3.0.5",
    "scipy>=1.16.3",
    "ttkbootstrap>=1.20.0",
]
